unpackaged/main/default/objects/litify_pm__Case_Qualify_Criteria__c/litify_pm__Case_Qualify_Criteria__c.object-meta.xml
<CustomObject>
    <label>Case Qualify Criteria</label>
    <nameField>
        <label>CaseQualifyCriteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Qualify Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>