unpackaged/main/default/objects/litify_pm__Case_Qualify_Criteria__c/fields/litify_pm__Criteria__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Criteria__c</fullName>
    <label>Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>