unpackaged/main/default/objects/litify_pm__Case_Qualify_Criteria__c/fields/litify_pm__DisplayName__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__DisplayName__c</fullName>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>