unpackaged/main/default/objects/litify_pm__Case_Qualify_Criteria__c/fields/litify_pm__Ending_CQC__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Ending_CQC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ending_CQC</label>
    <type>Checkbox</type>
</CustomField>