unpackaged/main/default/objects/litify_pm__Case_Qualify_Criteria__c/fields/litify_pm__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If unchecked, it will not evaluate</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>