unpackaged/main/default/objects/litify_pm__Case_Qualify_Criteria__c/fields/litify_pm__Reason__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Reason__c</fullName>
    <label>Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>