unpackaged/main/default/objects/litify_pm__Case_Qualify_Criteria__c/fields/litify_pm__Reason_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Reason_Type__c</fullName>
    <label>Reason Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TD</fullName>
            </value>
            <value>
                <fullName>UR</fullName>
            </value>
            <value>
                <fullName>UR-IST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>